Fix link wrapping on mobile

--- a/style.css
+++ b/style.css
@@ -124,7 +124,6 @@ svg {
 
   tr {
     font-size: 1.25em;
-    white-space: unset;
     word-break: normal;
   }
 
